# sea-battle

./: CMakeLists.txt  ConsoleView.cpp  ConsoleView.h  Field.cpp  Field.h  GameView.h  Gamer.cpp  Gamer.h  GraphicView.cpp  GraphicView.h  ManualStrategy.cpp  ManualStrategy.h  OptimalStrategy.cpp  OptimalStrategy.h  RandomStrategy.cpp  RandomStrategy.h  SeaBattle.cpp  SeaBattle.h  Strategy.h  main.cpp
